Untrack reports and handin files

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ lab1/task_2/exemple_benchmark.png
 lab1/inputs/benchmarking/associativity.png
 lab1/inputs/benchmarking/blocksize.png
 lab1/inputs/benchmarking/cachesize.png
+lab1/handin/*
+lab1/lab1_guillaume_thivolet.zip
+lab1/task_2/report_gthi.pdf
