--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ lab1/inputs/benchmarking/cachesize.png
 lab1/handin/*
 lab1/lab1_guillaume_thivolet.zip
 lab1/task_2/report_gthi.pdf
+lab1/task_2/example_benchmark.png
