--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ lab1/handin/*
 lab1/lab1_guillaume_thivolet.zip
 lab1/task_2/report_gthi.pdf
 lab1/task_2/example_benchmark.png
+lab2/inputs/benchmarking/*/*.s
+lab2/inputs/benchmarking/*/*.x
