--- a/lab3/configs/DDR4-config.cfg
+++ b/lab3/configs/DDR4-config.cfg
@@ -3,7 +3,7 @@
 # Comments start with #
 # There are restrictions for valid channel/rank numbers
  standard = DDR4
- channels = 1
+ channels = 4
  ranks = 1
  speed = DDR4_2400R
  org = DDR4_4Gb_x8
@@ -20,7 +20,7 @@
  early_exit = off
 # early_exit = on, off (default value is on)
 # If expected_limit_insts is set, some per-core statistics will be recorded when this limit (or the end of the whole trace if it's shorter than specified limit) is reached. The simulation won't stop and will roll back automatically until the last one reaches the limit.
- expected_limit_insts = 0
+ expected_limit_insts = 20000000
 #  warmup_insts = 100000000
  warmup_insts = 0
  cache = no
