--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ lab1/sim.exe
 lab1/inputs/benchmarking/bm2/*
 lab1/inputs/benchmarking/bm1/*
 lab1/inputs/benchmarking/bm3/*
+lab1/inputs/benchmarking/bm4/*
 lab1/sim
 lab1/task_2/associativity.png
 lab1/task_2/blocksize.png
