--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ lab1/inputs/benchmarking/bm2/*
 lab1/inputs/benchmarking/bm1/*
 lab1/inputs/benchmarking/bm3/*
 lab1/inputs/benchmarking/bm4/*
+lab1/inputs/benchmarking/bm5/*
+lab1/inputs/benchmarking/bm6/*
 lab1/sim
 lab1/task_2/associativity.png
 lab1/task_2/blocksize.png
@@ -31,3 +33,4 @@ Lab4/bin
 Lab4/obj
 lab2/*.exe
 .vscode/launch.json
+
