--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ lab1/task_2/ic_cachesize.png
 lab1/inputs/benchmarking/ic_associativity.png
 lab1/inputs/benchmarking/ic_blocksize.png
 lab1/inputs/benchmarking/ic_cachesize.png
+lab2/lab2_guillaume_thivolet.zip
