Ignored previous outputs

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ lab1/inputs/benchmarking/ic_associativity.png
 lab1/inputs/benchmarking/ic_blocksize.png
 lab1/inputs/benchmarking/ic_cachesize.png
 lab2/lab2_guillaume_thivolet.zip
+lab3/2controllers/*
