--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,6 @@ Lab4/bin
 Lab4/obj
 lab2/*.exe
 .vscode/launch.json
-
 lab1/task_2/dc_associativity.png
 lab1/task_2/dc_blocksize.png
 lab1/task_2/dc_cachesize.png
@@ -45,3 +44,12 @@ lab1/inputs/benchmarking/ic_blocksize.png
 lab1/inputs/benchmarking/ic_cachesize.png
 lab2/lab2_guillaume_thivolet.zip
 lab3/2controllers/*
+lab3/configs/DDR4-config.cfg
+lab3/stats_2controllers/*
+lab3/stats_4controllers/*
+lab3/report_gthi.html
+lab3/instruction_throughput_2.png
+lab3/instruction_throughput_4.png
+lab3/maximum_slowdown_2.png
+lab3/maximum_slowdown_4.png
+lab3/lab3_guillaume_thivolet.zip
